--- a/index.html
+++ b/index.html
@@ -6,18 +6,20 @@
     <title>Nithin Sai Koushik Kancharla - Portfolio</title>
     <meta name="description" content="Full Stack Developer & AI/ML Enthusiast - Portfolio" />
     <meta name="author" content="Nithin Sai Koushik Kancharla" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="blossom-bloom-portfolio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Nithin Sai Koushik Kancharla - Portfolio" />
+    <meta property="og:description" content="Full Stack Developer & AI/ML Enthusiast - Portfolio showcasing projects and skills" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/cherry-blossom-bg.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:title" content="Nithin Sai Koushik Kancharla - Portfolio" />
+    <meta name="twitter:description" content="Full Stack Developer & AI/ML Enthusiast - Portfolio" />
+    <meta name="twitter:image" content="/cherry-blossom-bg.jpg" />
   </head>
 
   <body>
