feat: add AnimatedCounter and TypewriterEffect components; implement CertificationsSection, GitHubStats, StatsSection, CertificateViewer, and DegreeCertificates pages

--- a/index.html
+++ b/index.html
@@ -3,22 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nithin Sai Koushik Kancharla - Portfolio</title>
-    <meta name="description" content="Full Stack Developer & AI/ML Enthusiast - Portfolio" />
+    <title>Nithin Sai Koushik Kancharla - Full Stack Developer & AI/ML Enthusiast</title>
+    <meta name="description" content="Portfolio of Nithin Sai Koushik Kancharla - Full Stack Developer specializing in Flutter, Java, Python, and AI/ML. Showcasing projects in mobile app development, web development, and machine learning." />
     <meta name="author" content="Nithin Sai Koushik Kancharla" />
+    <meta name="keywords" content="Full Stack Developer, AI/ML, Flutter Developer, Java, Python, Web Development, Mobile App Development, Machine Learning, Data Science" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Nithin Sai Koushik Kancharla - Portfolio" />
-    <meta property="og:description" content="Full Stack Developer & AI/ML Enthusiast - Portfolio showcasing projects and skills" />
+    <meta property="og:title" content="Nithin Sai Koushik Kancharla - Full Stack Developer & AI/ML Enthusiast" />
+    <meta property="og:description" content="Portfolio showcasing Full Stack Development, Mobile App Development with Flutter, and AI/ML projects. Experienced in Java, Python, JavaScript, and modern web technologies." />
     <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://blossom-bloom-portfolio.netlify.app" />
     <meta property="og:image" content="/cherry-blossom-bg.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Nithin Sai Koushik Kancharla - Portfolio" />
-    <meta name="twitter:description" content="Full Stack Developer & AI/ML Enthusiast - Portfolio" />
+    <meta name="twitter:title" content="Nithin Sai Koushik Kancharla - Full Stack Developer" />
+    <meta name="twitter:description" content="Portfolio showcasing Full Stack Development, Flutter Apps, and AI/ML projects" />
     <meta name="twitter:image" content="/cherry-blossom-bg.jpg" />
   </head>
 
